1.1, to be released
# Drupal 6.x and HTML Purifier 3.1.0 are required
! HTML Purifier now uses its native form function, so advanced configuration
  options are available.
! Modified and better defaults selected for HTML Purifier.
- HTML Purifier now maintains its own cache with a longer expiration time;
  this helps performance greatly.
- DefinitionCache uses Drupal's caching system
- HTML Purifier will check for new versions of the core library and display
  obnoxious warnings if it is out-of-date!
- Uninstall function now obliterates HTML Purifier variables too.

1.0, released 2007-07-15 (not via Drupal.org)
- Initial release, basic functionality implemented.