@@ -10,9 +10,8 @@ Non-code
 - Competitors
   - http://drupal.org/project/safehtml
 
-1.2
+1.3
 - Improve help text (this might be a good addition to the HTML Purifier
-  core). This would be for filter tips.
-- Super advanced configuration with PHP files
+  core). This would be for filter tips as well as for the form.
 - Compatibility
   - Paging comments
