@@ -1,7 +1,8 @@
 1.1, to be released
 # Drupal 6.x and HTML Purifier 3.1.0 are required
 ! HTML Purifier now uses its native form function, so advanced configuration
-  options are available.
+  options are available. You can also define your own custom functions
+  for configuration in the config/ directory.
 ! Modified and better defaults selected for HTML Purifier.
 - HTML Purifier now maintains its own cache with a longer expiration time;
   this helps performance greatly.
